Ajout de l'architecture de base du back-end, avec une première route pour le login.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+
+"Jwt": {
+  "Key": "u1s2v7y9KpX4HqJ6a3L8mB0nR5fTzYwV",
+  "Issuer": "Test",
+  "Audience": "Test",
+  "ExpireMinutes": 60
+}
 }
